fixed multiple-breath weapons

--- a/5e_monsters/monsters_html/adultvoiddragon-tob1-2023.html
+++ b/5e_monsters/monsters_html/adultvoiddragon-tob1-2023.html
@@ -72,6 +72,8 @@ line-height: 1.5em;
 <li><strong>Tail:</strong> Melee Weapon Attack: +12 to hit, reach 15 ft., one target. Hit: 16 (2d8 + 7) bludgeoning damage.</li>
 <li><strong>Aura of Madness:</strong> Each creature of the dragon’s choice that is within 120 feet of the dragon and aware of it must succeed on a DC 18 Wisdom saving throw or suffer short-term madness for 1 minute. A creature can repeat the saving throw at the end of each of its turns, ending the effect on itself on a success. If a creature’s saving throw is successful or the effect ends for it, the creature is immune to the dragon’s Aura of Madness for the next 24 hours.</li>
 <li><strong>Breath Weapons (Recharge 5-6):</strong> The dragon uses one of the following breath weapons.</li>
+<li><strong>Gravitic Breath:</strong> The dragon exhales localized gravity in a 60-foot cube, originating from the dragon. When a creature ends a fall in the cube, it takes 1d10 bludgeoning damage for every 10 feet it fell, to a maximum of 20d10. A creature that enters the cube for the first time on a turn or starts its turn there must make a DC 20 Dexterity saving throw. On a failure, the creature is restrained. On a success, the creature’s speed is halved as long as it remains in the cube. A creature can repeat the saving throw at the end of each of its turns, ending the effect on itself on a success. The cube lasts until the dragon’s breath weapon recharges.</li>
+<li><strong>Stellar Breath:</strong> The dragon exhales star fire in a 60-foot cone. Each creature in that area must make a DC 20 Dexterity saving throw, taking 31 (9d6) fire damage and 31 (9d6) radiant damage on a failed save, or half as much damage on a successful one.</li>
 </ul>
 <h3>Reactions</h3>
 <ul>
