--- a/5e_monsters/monsters_html/naina-tob1-2023.html
+++ b/5e_monsters/monsters_html/naina-tob1-2023.html
@@ -70,6 +70,9 @@ line-height: 1.5em;
 <li><strong>Claw (True Form Only):</strong> Melee Weapon Attack: +9 to hit, reach 5 ft., one target. Hit: 24 (3d12 + 5) slashing damage.</li>
 <li><strong>Slam (Humanoid Form Only):</strong> Melee Weapon Attack: +9 to hit, reach 5 ft., one target. Hit: 23 (4d8 + 5) bludgeoning damage.</li>
 <li><strong>Breath Weapons (Recharge 5–6, True Form Only):</strong> The naina uses one of the following breath weapons:</li>
+<li><strong>Poison Breath:</strong> The naina exhales poison breath in a 60-foot cone. Each creature in the area must make a DC 17 Constitution saving throw. On a failure, a creature takes 40 (9d8) poison damage and is poisoned for 1 minute. On a success, a creature takes half the damage and isn’t poisoned. The creature can repeat the saving throw at the end of each of its turns, ending the effect on itself on a success.</li>
+<li><strong>Paralysis Breath:</strong> The naina exhales paralyzing breath in a 30-foot cone. Each creature in that area must succeed on a DC 17 Constitution saving throw or be paralyzed for 1 minute. The creature can repeat the saving throw at the end of each of its turns, ending the effect on itself on a success.</li>
+<li><strong>Sleep Breath:</strong> The naina exhales sleep gas around it. Each creature within 20 feet of the naina must succeed on a DC 17 Constitution saving throw or fall unconscious for 10 minutes. This effect ends for a creature if the creature takes damage or another creature uses an action to wake it.</li>
 <li><strong>Spellcasting:</strong> The naina casts one of the following spells, requiring no material components and using Charisma as the spellcasting ability (spell save DC 16):<br>At will: charm person, dancing lights, silent image<br>3/day each: dispel magic, hypnotic pattern, invisibility<br>1/day each: dimension door, dominate person</li>
 </ul>
 <h3>Bonus Actions</h3>
