--- a/5e_monsters/monsters_html/voiddragonwyrmling-tob1-2023.html
+++ b/5e_monsters/monsters_html/voiddragonwyrmling-tob1-2023.html
@@ -67,6 +67,8 @@ line-height: 1.5em;
 <ul>
 <li><strong>Bite:</strong> Melee Weapon Attack: +5 to hit, reach 5 ft., one target. Hit: 8 (1d10 + 3) piercing damage plus 3 (1d6) cold damage.</li>
 <li><strong>Breath Weapons (Recharge 5–6):</strong> The dragon uses one of the following breath weapons.</li>
+<li><strong>Gravitic Breath:</strong> The dragon exhales localized gravity in a 15-foot cube, originating from the dragon. When a creature ends a fall in the cube, it takes 1d10 bludgeoning damage for every 10 feet it fell, to a maximum of 20d10. A creature that enters the cube for the first time on a turn or starts its turn there must make a DC 13 Dexterity saving throw. On a failure, the creature is restrained. On a success, the creature’s speed is halved as long as it remains in the cube. A creature can repeat the saving throw at the end of each of its turns, ending the effect on itself on a success. The cube lasts until the start of the dragon’s next turn.</li>
+<li><strong>Stellar Breath:</strong> The dragon exhales star fire in a 15-foot cone. Each creature in that area must make a DC 13 Dexterity saving throw, taking 10 (3d6) fire damage and 10 (3d6) radiant damage on a failed save, or half as much damage on a successful one.</li>
 </ul>
 <h3>Reactions</h3>
 <ul>
