--- a/5e_monsters/monsters_html/youngvoiddragon-tob1-2023.html
+++ b/5e_monsters/monsters_html/youngvoiddragon-tob1-2023.html
@@ -69,6 +69,8 @@ line-height: 1.5em;
 <li><strong>Bite:</strong> Melee Weapon Attack: +9 to hit, reach 10 ft., one target. Hit: 16 (2d10 + 5) piercing damage plus 7 (2d6) cold damage.</li>
 <li><strong>Claw:</strong> Melee Weapon Attack: +9 to hit, reach 5 ft., one target. Hit: 12 (2d6 + 5) slashing damage.</li>
 <li><strong>Breath Weapons (Recharge 5–6):</strong> The dragon uses one of the following breath weapons.</li>
+<li><strong>Gravitic Breath:</strong> The dragon exhales localized gravity in a 30-foot cube, originating from the dragon. When a creature ends a fall in the cube, it takes 1d10 bludgeoning damage for every 10 feet it fell, to a maximum of 20d10. A creature that enters the cube for the first time on a turn or starts its turn there must make a DC 17 Dexterity saving throw. On a failure, the creature is restrained. On a success, the creature’s speed is halved as long as it remains in the cube. A creature can repeat the saving throw at the end of each of its turns, ending the effect on itself on a success. The cube lasts until the dragon’s breath weapon recharges.</li>
+<li><strong>Stellar Breath:</strong> The dragon exhales star fire in a 30-foot cone. Each creature in that area must make a DC 17 Dexterity saving throw, taking 21 (6d6) fire damage and 21 (6d6) radiant damage on a failed save, or half as much damage on a successful one.</li>
 </ul>
 <h3>Reactions</h3>
 <ul>
