--- a/dice_roller/dice_roller.html
+++ b/dice_roller/dice_roller.html
@@ -5,109 +5,131 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Dice Roller</title>
   <style>
-  
-body {
-	font-family: Arial, sans-serif;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	touch-action: manipulation;
-	margin: 0;
-}
-.input-form {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	margin-bottom: 10px;
-	width: 100%;
-	max-width: 300px;
-}
-.input-form label,.input-form input {
-	flex: 1;
-	margin: 5px;
-	padding: 10px;
-	font-size: 1.2em;
-	width: 100%;
-}
-.input-form input {
-	text-align: center;
-}
-.dice-roller {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-}
-.dice {
-	margin: 10px;
-	padding: 20px;
-	font-size: 1.5em;
-	cursor: pointer;
-}
-.history {
-	width: 90%;
-	max-width: 400px;
-	margin: 20px 0;
-	padding: 10px;
-	border: 1px solid #000;
-	background-color: #fff;
-	max-height: 300px;
-	overflow-y: auto;
-	font-size: 1.5em;
-}
-.clear-history {
-	margin-top: 10px;
-	font-size: 1.2em;
-	padding: 10px;
-	font-size: 1.5em;
-	width: 100%;
-	font-weight: normal;
-}
-p {
-	text-align: center;
-	width: 95%;
-	max-width: 400px;
-	font-size: 1.2em;
-}
-.custom-roll {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	margin-top: 10px;
-}
-.custom-roll input,.custom-roll button {
-	margin: 5px;
-	padding: 10px;
-	font-size: 1.2em;
-	width: 100%;
-}
+  body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    touch-action: manipulation;
+    margin: 0;
+  }
+
+  .input-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    width: 100%;
+    max-width: 300px;
+  }
+
+  .input-form label,
+  .input-form input {
+    flex: 1;
+    margin: 5px;
+    padding: 10px;
+    font-size: 1.2em;
+    width: 100%;
+  }
+
+  .input-form input {
+    text-align: center;
+  }
+
+  .dice-roller {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .dice {
+    margin: 10px;
+    padding: 20px;
+    font-size: 1.5em;
+    cursor: pointer;
+  }
+
+  .history {
+    width: 90%;
+    max-width: 400px;
+    margin: 20px 0;
+    padding: 10px;
+    border: 1px solid #000;
+    background-color: #fff;
+    max-height: 300px;
+    overflow-y: auto;
+    font-size: 1.5em;
+  }
+
+  .clear-history {
+    margin-top: 10px;
+    font-size: 1.2em;
+    padding: 10px;
+    font-weight: normal;
+    width: 100%;
+  }
+
+  p {
+    text-align: center;
+    width: 95%;
+    max-width: 400px;
+    font-size: 1.2em;
+  }
+
+  .custom-roll {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 10px;
+  }
+
+  .custom-roll input,
+  .custom-roll button {
+    margin: 5px;
+    padding: 10px;
+    font-size: 1.2em;
+    width: 100%;
+  }
 
   </style>
   <style type="text/css">
-  div.c1 {display: flex; flex-direction: row; align-items: center;}
+  div.c1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
   </style>
 </head>
 <body>
   <h1>Dice Roller</h1>
   <form class="input-form">
     <div class="c1">
-      <label for="dice">Dice</label> <input type="number" id="dice" name="dice" value="1">
+      <label for="dice">Dice</label>
+      <input type="number" id="dice" name="dice" value="1">
     </div>
     <div class="c1">
-      <label for="modifier">Mod</label> <input type="number" id="modifier" name="modifier" value="0">
+      <label for="modifier">Mod</label>
+      <input type="number" id="modifier" name="modifier" value="0">
     </div>
   </form>
   <div class="dice-roller">
-    <button class="dice" data-sides="4">D4</button> <button class="dice" data-sides="6">D6</button> <button class="dice" data-sides="8">D8</button> <button class="dice" data-sides="10">D10</button> <button class="dice" data-sides="12">D12</button> <button class="dice" data-sides="20">D20</button> <button class="dice" data-sides="100">D100</button>
+    <button class="dice" data-sides="4">D4</button>
+    <button class="dice" data-sides="6">D6</button>
+    <button class="dice" data-sides="8">D8</button>
+    <button class="dice" data-sides="10">D10</button>
+    <button class="dice" data-sides="12">D12</button>
+    <button class="dice" data-sides="20">D20</button>
+    <button class="dice" data-sides="100">D100</button>
   </div>
   <div class="custom-roll">
-    <input type="number" id="custom-sides" name="custom-sides" value="3" min="2"><button type="button" class="roll-custom-dice">Custom</button>
+    <input type="number" id="custom-sides" name="custom-sides" value="3" min="2">
+    <button type="button" class="roll-custom-dice">Custom</button>
   </div>
   <form class="input-form">
-    <button type="submit" class="clear-history">Clear</button>
+    <button type="button" class="clear-history">Clear History</button>
   </form>
-  <div class="history" id="history">
-  </div>
+  <div class="history" id="history"></div>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const diceButtons = document.querySelectorAll('.dice');
@@ -125,18 +147,25 @@ p {
           let modifier = diceForm.elements.modifier.value;
           rolls = parseInt(rolls) || 1;
           modifier = parseInt(modifier) || 0;
+          let rollsArray = [];
           let total = 0;
           for (let i = 0; i < rolls; i++) {
-            total += Math.floor(Math.random() * sides) + 1;
+            let roll = Math.floor(Math.random() * sides) + 1;
+            rollsArray.push(roll);
+            total += roll;
           }
           total += modifier;
           let rollStr = `${rolls}d${sides}`;
+          if (rolls > 1) {
+            rollStr += ` (${rollsArray.join(', ')})`;
+          }
           if (modifier !== 0) {
             rollStr += ` + ${modifier}`;
           }
-          rollStr += ` = ${total}<br>`;
-	      history.innerHTML = rollStr + history.innerHTML;
-    	  history.scrollTop = 0;
+          rollStr += ` = ${total}`;
+          rollStr += `<br>`;
+          history.innerHTML = rollStr + history.innerHTML;
+          history.scrollTop = 0;
         });
       });
 
@@ -160,7 +189,11 @@ p {
         if (modifier !== 0) {
           rollStr += ` + ${modifier}`;
         }
-        rollStr += ` = ${total}<br>`;
+        rollStr += ` = ${total}`;
+        if (rolls > 1) {
+          rollStr += ` (${total - modifier})`;
+        }
+        rollStr += `<br>`;
         history.innerHTML = rollStr + history.innerHTML;
         history.scrollTop = 0;
       });
