Added github link

--- a/dice_roller/dice_roller.html
+++ b/dice_roller/dice_roller.html
@@ -196,6 +196,6 @@
       });
     });
   </script>
-  <p>This tool is released under a <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0 Universal</a> license. You can copy, modify, and distribute this tool, even for commercial purposes, all without asking permission. <a href="dice_roller.zip">Download this tool</a>.</p>
+  <p>This tool is released under a <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0 Universal</a> license. You can copy, modify, and distribute this tool, even for commercial purposes, all without asking permission. <a href="dice_roller.zip">Download this tool</a> or <a href="https://github.com/mshea/lazy_gm_tools/tree/main/dice_roller">fork it on Github</a>.</p>
 </body>
 </html>
