--- a/dice_roller/dice_roller.html
+++ b/dice_roller/dice_roller.html
@@ -111,13 +111,13 @@
     </div>
   </form>
   <div class="dice-roller">
-    <button class="dice" data-sides="4">D4</button>
-    <button class="dice" data-sides="6">D6</button>
-    <button class="dice" data-sides="8">D8</button>
-    <button class="dice" data-sides="10">D10</button>
-    <button class="dice" data-sides="12">D12</button>
-    <button class="dice" data-sides="20">D20</button>
-    <button class="dice" data-sides="100">D100</button>
+    <button class="dice" data-sides="4">d4</button>
+    <button class="dice" data-sides="6">d6</button>
+    <button class="dice" data-sides="8">d8</button>
+    <button class="dice" data-sides="10">d10</button>
+    <button class="dice" data-sides="12">d12</button>
+    <button class="dice" data-sides="20">d20</button>
+    <button class="dice" data-sides="100">d100</button>
   </div>
   <div class="custom-roll">
     <input type="number" id="custom-sides" name="custom-sides" value="3" min="2">
