--- a/5e_monsters/index.html
+++ b/5e_monsters/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="robots" content="noindex">
 <meta charset="UTF-8">
 
 <title>5e Artisanal Monster Database</title>
