Added combat tracker

--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -151,7 +151,8 @@ document.getElementById('mainSearchInput').addEventListener('keypress', function
 <h2>Tools</h2>
 <ul>
 <li><a href="./tools/dice_roller/index.html">Dice Roller</a></li>
-<li><a href="./tools/encounter_calculator/index.html">5e Encounter Calculator</a></li>
+<li><a href="./tools/encounter_calculator/index.html">Encounter Calculator</a></li>
+<li><a href="./tools/combat_tracker/index.html">Combat Tracker</a></li>
 <li><a href="https://slyflourish.com/sf_patreon_files_898123050001223/dyson_maps.html">Dyson Commercial Map Gallery</a> (External Link)</li>
 <li><a href="./tools/fof_monster_stats/index.html">Forge of Foes Monster Stats</a></li>
 <li><a href="./tools/token_maker/index.html">Token Maker</a></li>
