--- a/5e_artisanal_database/tools/combat_tracker/index.html
+++ b/5e_artisanal_database/tools/combat_tracker/index.html
@@ -476,7 +476,7 @@ function renderCombatTable() {
                 <input type="text" value="${combatant.name}" onchange="updateName(${combatant.id}, this.value)" style="border: none; background: transparent; font-size: 16px; width: calc(100% - 35px); font-weight: bold; color: black;">
                 <button class="remove-btn" onclick="removeCombatant(${combatant.id})" title="Remove" style="position: absolute; right: 2px; top: 50%; transform: translateY(-50%); padding: 4px 8px; font-size: 16px; line-height: 1; min-width: 30px;">×</button>
             </td>
-            <td style="font-size: 16px; font-weight: bold; color: black; text-align: center;">${combatant.ac || '-'}</td>
+            <td><input type="number" value="${combatant.ac || ''}" onchange="updateAC(${combatant.id}, this.value)" style="border: none; background: transparent; font-size: 16px; width: 35px; font-weight: bold; text-align: center; color: black;" min="1" max="30" placeholder="-"></td>
             ${combatant.maxHp ? `<td>
                 <div class="hp-controls">
                     <button onclick="modifyHp(${combatant.id}, 5)">+5</button>
@@ -552,6 +552,21 @@ function updateInitiative(id, newInitiative) {
                 if (currentTurnIndex === -1) currentTurnIndex = 0;
             }
             
+            renderCombatTable();
+        }
+    }
+}
+
+function updateAC(id, newAC) {
+    const combatant = combatants.find(c => c.id === id);
+    if (combatant) {
+        const ac = parseInt(newAC);
+        if (!isNaN(ac) && ac >= 1 && ac <= 30) {
+            combatant.ac = ac;
+            renderCombatTable();
+        } else if (newAC.trim() === '') {
+            // Allow clearing the AC field
+            combatant.ac = null;
             renderCombatTable();
         }
     }
