--- a/5e_artisanal_database/licensing.html
+++ b/5e_artisanal_database/licensing.html
@@ -3,20 +3,36 @@
 <html>
 <head>
   <title>5e Artisanal Database Licensing</title>
+  <meta name="viewport" content="user-scalable=yes, width=device-width">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="robots" content="noindex">
   <meta charset="UTF-8">
   <style>
-  body {
-  max-width: 700px;
-  margin: auto;
-  font-size: 18px;
-  font-family: sans-serif;
-  padding: 10px;
-  }
-  p, li {
-  line-height: 1.5em;
-  }
+body {
+    max-width: 700px;
+    margin: auto;
+    font-size: 18px;
+    font-family: sans-serif;
+    padding: 10px;
+}
+p, li {
+    line-height: 1.5em;
+}
+ul, ol {
+    padding-left: 20px;
+    margin-left: 0;
+}
+li {
+    margin-left: 0;
+}
+table {
+    border-collapse: collapse;
+}
+th, td {
+    border: 1px solid black;
+    padding: 5px;
+    text-align: left;
+}
   </style>
 </head>
 <body>
