Centralize generator styling and improve list margins
Create shared 5eadb.css stylesheet for all generators and main page. Remove custom ul/ol margins to use browser defaults for better spacing. Add li line-height to match paragraphs. Update PWA cache for new CSS file.

--- a/5e_artisanal_database/generators/treasure/index.html
+++ b/5e_artisanal_database/generators/treasure/index.html
@@ -6,24 +6,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 <meta charset="UTF-8">
-<style>
-body {
-  max-width: 700px;
-  margin: auto;
-  font-size: 18px;
-  font-family: sans-serif;
-  padding: 10px;
-}
-button, select {
-  font-size: 18px;
-  min-height: 44px;
-  padding: 12px 16px;
-  touch-action: manipulation;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  user-select: none;
-}
-</style>
+<link rel="stylesheet" href="../../css_js/5eadb.css">
 <title>Lazy 5e Treasure Generator</title>
 </head>
 <body>
