--- a/5e_artisanal_database/generators/npcs/index.html
+++ b/5e_artisanal_database/generators/npcs/index.html
@@ -3,50 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
-<style>
-body {
-    max-width: 700px;
-    margin: auto;
-    font-size: 18px;
-    font-family: sans-serif;
-    padding: 10px;
-}
-p, li {
-    line-height: 1.5em;
-}
-ul, ol {
-    padding-left: 20px;
-    margin-left: 0;
-}
-li {
-    margin-left: 0;
-}
-table {
-    border-collapse: collapse;
-}
-th, td {
-    border: 1px solid black;
-    padding: 5px;
-    text-align: left;
-}
-button, select {
-    font-size: 18px;
-    min-height: 44px;
-    padding: 12px 16px;
-    margin: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #f9f9f9;
-    cursor: pointer;
-    touch-action: manipulation;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    user-select: none;
-}
-button:hover {
-    background-color: #e9e9e9;
-}
-</style>
+<link rel="stylesheet" href="../../css_js/5eadb.css">
 <title>NPC Generator</title>
 </head>
 <body>
