--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -1,95 +1,11 @@
 <!DOCTYPE html>
 <head>
-<meta name="viewport" content="user-scalable=yes, width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
 <link rel="manifest" href="./manifest.json">
 <meta name="theme-color" content="#2c3e50">
-<style>
-.main-search-container {
-    margin: 20px 0;
-    padding: 0;
-}
-
-.main-search-input {
-    width: 100%;
-    padding: 12px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    background-color: white;
-}
-
-.main-search-input:focus {
-    border-color: #888;
-    outline: none;
-    box-shadow: 0 0 0 2px rgba(136, 136, 136, 0.2);
-}
-
-.search-button {
-    background-color: #666;
-    color: white;
-    padding: 12px 24px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 10px;
-}
-
-.search-button:hover {
-    background-color: #555;
-}
-
-.search-form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-@media (min-width: 600px) {
-    .search-form {
-        flex-direction: row;
-        align-items: center;
-    }
-    
-    .main-search-input {
-        flex: 1;
-        margin-right: 10px;
-    }
-    
-    .search-button {
-        margin-top: 0;
-    }
-}
-body {
-    max-width: 700px;
-    margin: auto;
-    font-size: 18px;
-    font-family: sans-serif;
-    padding: 10px;
-}
-p, li {
-    line-height: 1.5em;
-}
-ul, ol {
-    padding-left: 20px;
-    margin-left: 0;
-}
-li {
-    margin-left: 0;
-}
-table {
-    border-collapse: collapse;
-}
-th, td {
-    border: 1px solid black;
-    padding: 5px;
-    text-align: left;
-}
-
-</style>
+<link rel="stylesheet" href="./css_js/5eadb.css">
 <title>5e Artisanal Database</title>
 </head>
 <body>
