Add missing D&D 2024 magic items with null rarity and update to 'varies' rarity
- Include 11 additional magic items from magic categories with null rarity
- Update rarity handling to assign 'varies' instead of 'common' for items with null rarity
- Added items: Airship, Antitoxin, Belt of Giant Strength, Case Map or Scroll,
  Feather Token, Figurine of Wondrous Power, Ioun Stone, Potion of Giant Strength,
  Potion of Healing, Potions of Healing, Spell Scroll
- Total D&D 2024 magic items now: 244 items

--- a/5e_artisanal_database/magic_items/index.html
+++ b/5e_artisanal_database/magic_items/index.html
@@ -9746,6 +9746,12 @@ font-size: 16px !important;
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
 <tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/airship.html" target="_blank">Airship</a> – <a href="./md/5.2_srd_(d&d_2024)/airship.md" target="_blank">md</a></td>
+<td>Varies</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
 <td><a href="./html/5.2_srd_(d&d_2024)/ammunition-1-2-or-3.html" target="_blank">Ammunition, +1, +2, or +3</a> – <a href="./md/5.2_srd_(d&d_2024)/ammunition-1-2-or-3.md" target="_blank">md</a></td>
 <td>Varies</td>
 <td>Weapon</td>
@@ -9779,6 +9785,12 @@ font-size: 16px !important;
 <td><a href="./html/5.2_srd_(d&d_2024)/animated-shield.html" target="_blank">Animated Shield</a> – <a href="./md/5.2_srd_(d&d_2024)/animated-shield.md" target="_blank">md</a></td>
 <td>Very Rare</td>
 <td>Armor</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/antitoxin.html" target="_blank">Antitoxin</a> – <a href="./md/5.2_srd_(d&d_2024)/antitoxin.md" target="_blank">md</a></td>
+<td>Varies</td>
+<td>Wondrous Item</td>
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
 <tr>
@@ -9844,6 +9856,12 @@ font-size: 16px !important;
 <tr>
 <td><a href="./html/5.2_srd_(d&d_2024)/bead-of-force.html" target="_blank">Bead of Force</a> – <a href="./md/5.2_srd_(d&d_2024)/bead-of-force.md" target="_blank">md</a></td>
 <td>Rare</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/belt-of-giant-strength.html" target="_blank">Belt of Giant Strength</a> – <a href="./md/5.2_srd_(d&d_2024)/belt-of-giant-strength.md" target="_blank">md</a></td>
+<td>Varies</td>
 <td>Wondrous Item</td>
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
@@ -9934,6 +9952,12 @@ font-size: 16px !important;
 <tr>
 <td><a href="./html/5.2_srd_(d&d_2024)/carpet-of-flying.html" target="_blank">Carpet of Flying</a> – <a href="./md/5.2_srd_(d&d_2024)/carpet-of-flying.md" target="_blank">md</a></td>
 <td>Very Rare</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/case-map-or-scroll.html" target="_blank">Case, Map or Scroll</a> – <a href="./md/5.2_srd_(d&d_2024)/case-map-or-scroll.md" target="_blank">md</a></td>
+<td>Varies</td>
 <td>Wondrous Item</td>
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
@@ -10166,6 +10190,18 @@ font-size: 16px !important;
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
 <tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/feather-token.html" target="_blank">Feather Token</a> – <a href="./md/5.2_srd_(d&d_2024)/feather-token.md" target="_blank">md</a></td>
+<td>Varies</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/figurine-of-wondrous-power.html" target="_blank">Figurine of Wondrous Power</a> – <a href="./md/5.2_srd_(d&d_2024)/figurine-of-wondrous-power.md" target="_blank">md</a></td>
+<td>Varies</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
 <td><a href="./html/5.2_srd_(d&d_2024)/flame-tongue.html" target="_blank">Flame Tongue</a> – <a href="./md/5.2_srd_(d&d_2024)/flame-tongue.md" target="_blank">md</a></td>
 <td>Rare</td>
 <td>Weapon</td>
@@ -10318,6 +10354,12 @@ font-size: 16px !important;
 <tr>
 <td><a href="./html/5.2_srd_(d&d_2024)/instant-fortress.html" target="_blank">Instant Fortress</a> – <a href="./md/5.2_srd_(d&d_2024)/instant-fortress.md" target="_blank">md</a></td>
 <td>Rare</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/ioun-stone.html" target="_blank">Ioun Stone</a> – <a href="./md/5.2_srd_(d&d_2024)/ioun-stone.md" target="_blank">md</a></td>
+<td>Varies</td>
 <td>Wondrous Item</td>
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
@@ -10568,8 +10610,20 @@ font-size: 16px !important;
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
 <tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/potion-of-giant-strength.html" target="_blank">Potion of Giant Strength</a> – <a href="./md/5.2_srd_(d&d_2024)/potion-of-giant-strength.md" target="_blank">md</a></td>
+<td>Varies</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
 <td><a href="./html/5.2_srd_(d&d_2024)/potion-of-growth.html" target="_blank">Potion of Growth</a> – <a href="./md/5.2_srd_(d&d_2024)/potion-of-growth.md" target="_blank">md</a></td>
 <td>Uncommon</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/potion-of-healing.html" target="_blank">Potion of Healing</a> – <a href="./md/5.2_srd_(d&d_2024)/potion-of-healing.md" target="_blank">md</a></td>
+<td>Varies</td>
 <td>Wondrous Item</td>
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
@@ -10612,6 +10666,12 @@ font-size: 16px !important;
 <tr>
 <td><a href="./html/5.2_srd_(d&d_2024)/potion-of-water-breathing.html" target="_blank">Potion of Water Breathing</a> – <a href="./md/5.2_srd_(d&d_2024)/potion-of-water-breathing.md" target="_blank">md</a></td>
 <td>Uncommon</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/potions-of-healing.html" target="_blank">Potions of Healing</a> – <a href="./md/5.2_srd_(d&d_2024)/potions-of-healing.md" target="_blank">md</a></td>
+<td>Varies</td>
 <td>Wondrous Item</td>
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
@@ -10846,6 +10906,12 @@ font-size: 16px !important;
 <tr>
 <td><a href="./html/5.2_srd_(d&d_2024)/sovereign-glue.html" target="_blank">Sovereign Glue</a> – <a href="./md/5.2_srd_(d&d_2024)/sovereign-glue.md" target="_blank">md</a></td>
 <td>Legendary</td>
+<td>Wondrous Item</td>
+<td>5.2 SRD (D&D 2024)</td>
+</tr>
+<tr>
+<td><a href="./html/5.2_srd_(d&d_2024)/spell-scroll.html" target="_blank">Spell Scroll</a> – <a href="./md/5.2_srd_(d&d_2024)/spell-scroll.md" target="_blank">md</a></td>
+<td>Varies</td>
 <td>Wondrous Item</td>
 <td>5.2 SRD (D&D 2024)</td>
 </tr>
