Add Wizard Spellbook link to main index and clarify git commit guidelines

--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -90,6 +90,7 @@ document.getElementById('mainSearchInput').addEventListener('keypress', function
 <li><a href="./generators/dm_relics/index.html">Deep Magic Relics</a></li>
 <li><a href="./generators/weapons/index.html">Unique Weapons</a></li>
 <li><a href="./generators/armor/index.html">Unique Armor</a></li>
+<li><a href="./generators/spellbook/index.html">Wizard Spellbook</a></li>
 <li><a href="./generators/generator_template/index.html">Generator Template</a></li>
 </ul>
 
