fixed spellbook stuff

--- a/5e_artisanal_database/generators/spellbook/index.html
+++ b/5e_artisanal_database/generators/spellbook/index.html
@@ -7,11 +7,9 @@
 <title>5e Spellbook Generator</title>
 </head>
 <body>
-<div><a href="../../index.html">5e Artisanal Database</a> → 5e Spellbook Generator</div>
+<div><a href="../../index.html">5e Artisanal Database</a> → Spellbook Generator</div>
 
-<h1>5e Wizard Spellbook Generator</h1>
-
-<p>Generate random wizard spellbooks for NPCs, treasure, or inspiration.</p>
+<h1>Wizard Spellbook Generator</h1>
 
 <div class="controls">
     <label for="wizard-level">Wizard Level:</label>
@@ -39,7 +37,7 @@
     </select>
 </div>
 
-<button onclick="generateSpellbook()">Generate Spellbook</button>
+<p><button onclick="generateSpellbook()">Generate Spellbook</button></p>
 
 <div id="output">
     <em>Generating spellbook...</em>
