--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -84,13 +84,13 @@ document.getElementById('mainSearchInput').addEventListener('keypress', function
 <li><a href="./generators/locations/index.html"">Locations</a></li>
 <li><a href="./generators/traps/index.html"">Traps</a></li>
 <li><a href="./generators/treasure/index.html"">Lazy 5e Treasure</a></li>
+<li><a href="./generators/spellbook/index.html">Spellbook</a></li>
 <li><a href="./generators/2024_dnd_treasure/index.html">2024 D&D Treasure</a></li>
 <li><a href="./generators/tov_treasure/index.html">Tales of the Valiant Treasure</a></li>
 <li><a href="./generators/relics/index.html">Relics (single-use magic items)</a></li>
 <li><a href="./generators/dm_relics/index.html">Deep Magic Relics</a></li>
 <li><a href="./generators/weapons/index.html">Unique Weapons</a></li>
 <li><a href="./generators/armor/index.html">Unique Armor</a></li>
-<li><a href="./generators/spellbook/index.html">Wizard Spellbook</a></li>
 <li><a href="./generators/generator_template/index.html">Generator Template</a></li>
 </ul>
 
