--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -84,7 +84,8 @@ document.getElementById('mainSearchInput').addEventListener('keypress', function
 <li><a href="./generators/locations/index.html"">Locations</a></li>
 <li><a href="./generators/traps/index.html"">Traps</a></li>
 <li><a href="./generators/treasure/index.html"">Lazy 5e Treasure</a></li>
-<li><a href="./generators/spellbook/index.html">Spellbook</a></li>
+<li><a href="./generators/scrolls/index.html">Scrolls</a></li>
+<li><a href="./generators/spellbook/index.html">Spellbooks</a></li>
 <li><a href="./generators/2024_dnd_treasure/index.html">2024 D&D Treasure</a></li>
 <li><a href="./generators/tov_treasure/index.html">Tales of the Valiant Treasure</a></li>
 <li><a href="./generators/relics/index.html">Relics (single-use magic items)</a></li>
