updated monster file for the combat tracker

--- a/5e_artisanal_database/tools/combat_tracker/index.html
+++ b/5e_artisanal_database/tools/combat_tracker/index.html
@@ -223,7 +223,7 @@ th {
     <button onclick="nextTurn()">Next Turn</button>
     <button onclick="resetCombat()">Reset</button>
     <input type="file" id="importFile" accept=".json" style="display: none" onchange="importCombat(event)">
-    <button onclick="document.getElementById('importFile').click()">Import</button>
+    <button onclick="document.getElementById('importFile').click()">Import JSON</button>
     <button onclick="exportCombat()">Export JSON</button>
     <button onclick="copyInitiativeText()">Copy Text</button>
 </div>
