Fix D&D 2024 monster initiative values for proper proficiency calculation
- Updated 25 monster files in 5.2 SRD to use correct initiative values
- Fixed Ancient Gold Dragon: +6 → +16, Kraken: +4 → +14, Lich: +7 → +17
- Rebuilt 12_Monsters_A-Z.md rules compilation with proper header hierarchy
- Updated combat tracker monsters.js with correct initiative values (27 monsters)
- Regenerated HTML rules pages with corrected values
- Rebuilt search index with updated content

D&D 2024 monsters now properly account for double proficiency in initiative
per the new rules: Initiative = Dex Mod + (Init Proficiency × Prof Bonus)

--- a/5e_artisanal_database/rules/html/5.2 SRD (D&D 2024)/index.html
+++ b/5e_artisanal_database/rules/html/5.2 SRD (D&D 2024)/index.html
@@ -23,7 +23,7 @@
 <li><a href="09_GameplayToolbox.html">09 GameplayToolbox</a></li>
 <li><a href="10_MagicItems.html">10 MagicItems</a></li>
 <li><a href="11_Monsters.html">11 Monsters</a></li>
-<li><a href="12_MonstersA-Z.html">12 MonstersA-Z</a></li>
+<li><a href="12_Monsters_A-Z.html">12 Monsters A-Z</a></li>
 <li><a href="13_Animals.html">13 Animals</a></li>
 <li><a href="LICENSE.html">LICENSE</a></li>
 </ul>
