--- a/5e_artisanal_database/generators/scrolls/index.html
+++ b/5e_artisanal_database/generators/scrolls/index.html
@@ -4,20 +4,32 @@
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../../css_js/5eadb.css">
-<title>Relic Generator</title>
+<title>Scroll Generator</title>
 </head>
 <body>
 <div><a href="../../index.html">5e Artisanal Database</a> → Scroll Generator</div>
 
 <h1>Scroll Generator</h1>
 
-<button onclick="generateContent()">Roll</button>
-
-<div id="output">
-    <em>Click the button above to generate content...</em>
+<div style="margin: 20px 0;">
+    <label for="rarity">Select Scroll Rarity:</label>
+    <select id="rarity" style="margin-left: 10px;">
+        <option value="common">Common (Cantrips & 1st level)</option>
+        <option value="uncommon">Uncommon (2nd & 3rd level)</option>
+        <option value="rare">Rare (4th & 5th level)</option>
+        <option value="very-rare">Very Rare (6th, 7th & 8th level)</option>
+        <option value="legendary">Legendary (9th level)</option>
+        <option value="lucky">I Feel Lucky (Random rarities)</option>
+    </select>
 </div>
 
-<script src="generator_text.js"></script>
-<script src="../../css_js/generator.js"></script>
+<button onclick="generateScrolls()">Generate 10 Scrolls</button>
+
+<div id="output">
+    <em>Select a rarity and click the button above to generate 10 spell scrolls...</em>
+</div>
+
+<script src="scroll_data.js"></script>
+<script src="scroll_generator.js"></script>
 </body>
 </html>
