feat: Increase max HP in combat tracker
When a combatant is at maximum hit points, pressing the "+5" button now increases their maximum hit points by 5, in addition to their current hit points.

--- a/5e_artisanal_database/tools/combat_tracker/index.html
+++ b/5e_artisanal_database/tools/combat_tracker/index.html
@@ -648,6 +648,9 @@ function renderCombatTable() {
 function modifyHp(id, amount) {
     const combatant = combatants.find(c => c.id === id);
     if (combatant) {
+        if (amount > 0 && combatant.currentHp === combatant.maxHp) {
+            combatant.maxHp += amount;
+        }
         combatant.currentHp = Math.max(0, Math.min(combatant.maxHp, combatant.currentHp + amount));
         renderCombatTable();
     }
